# generative-prompt-engineering

./: .gitignore  Makefile  README.md  pyproject.toml
cloudbuild/: ci_pipeline.yaml
src/generative_prompt_engineering/: __init__.py  models.py
src/generative_prompt_engineering/examples/: local_mcp_server.py  stdio_mcp_client.py  test_mcp_server.py
src/generative_prompt_engineering/mcp/: clients.py  prompts.py  resources.py  servers.py  tools.py
tests/: conftest.py  test_init.py  test_models.py
tests/mcp/: test_prompts.py  test_resources.py  test_servers.py  test_tools.py
